# khal-ai-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: AGENTS.md  mcp.config.json
db/: seed.sql
db/init/: 01-schema.sql  02-seed.sh
docs/: requirements.md
docs/adrs/: ADR-0001-stack-python-pydantic.md  ADR-0002-ui-console-operador.md  ADR-0003-midia-via-tool-action.md  ADR-0004-retrieval-lexico-strategy.md  ADR-0005-eventos-deterministicos-memoria.md  ADR-0006-docker-compose-sandbox.md  ADR-0007-agente-claude-code-auth.md  ADR-0008-seeder-programatico-python.md  ADR-0009-object-storage-faturas.md  ADR-0010-media-egress-optin.md  ADR-0011-personas-canonicas-deterministicas.md  ADR-0012-auditoria-observabilidade-tool-call.md  ADR-0013-fronteira-memoria-transcricao-eventos-sessao.md  ADR-0014-token-context-optimization.md  ADR-0016-cloud-provisioning-decisao-de-nao-fazer.md  ADR-0017-camada-legada-acl-mcp-over-rest.md  ADR-0019-summarize-thread.md  README.md
docs/domain/: data-dictionary.md  domain-model.md  erd.md  personas-journeys.md  seed-design.md  ubiquitous-language.md
docs/evals/: README.md  agent-score-iteracoes.md
docs/operations/: runbook.md
docs/specs/: SPEC-000-domain-and-seed-foundation.md  SPEC-001-legacy-rest-api.md  SPEC-002-operator-console.md  SPEC-003-mcp-server.md  SPEC-004-agent-cx.md  SPEC-005-knowledge-retrieval.md  SPEC-006-dynamic-persona-registry.md  SPEC-007-sandbox-omni-genie-runtime.md  SPEC-008-invoice-pdf.md  SPEC-009-proactive-notifications.md  SPEC-010-proactive-domain-actions.md  SPEC-011-invoice-status-toggle.md  SPEC-012-persona-hints.md  SPEC-013-multi-uc.md  SPEC-014-status-menu.md  SPEC-015-sender-identity.md  SPEC-016-human-handoff.md  SPEC-017-invoice-attachment.md  SPEC-018-operator-chat.md  SPEC-019-media-egress.md  SPEC-020-ticket-resolve-notify.md  SPEC-021-ui-visual-refactor.md  SPEC-022-conversation-context.md  SPEC-023-journey-resilience.md  SPEC-024-chat-history.md  SPEC-025-consumption-insights.md  SPEC-026-proactive-due-reminder.md  SPEC-027-memoria-por-titular.md  SPEC-028-summarize-thread.md  SPEC-029-audio-stt-inbound.md  SPEC-030-lid-resolution-wiring.md  SPEC-031-pdf-any-invoice.md
gateway/: nginx.conf
kb/: bandeiras-tarifarias.md  falta-energia.md  prazos-sla.md  religacao.md  segunda-via.md  titularidade.md
sandbox/: Dockerfile  README.md  RUNBOOK.md  compose.sandbox.yml  connect.sh  disable-media.sh  enable-media.sh  genie-wire.sh  pair.sh  reseed.sh  sandbox-up.sh  smoke.sh  verify-scoping.ts
sandbox/agent/: luz-do-vale.frontmatter.yaml  settings.json
sandbox/egress/: Dockerfile  filter  tinyproxy.conf
src/: config.py
src/agent/: __init__.py  model_router.py  prompt.py  session_hash.py
src/application/: persona_registry.py  ports.py  services.py
src/evals/: harness.py  journeys.py  run.py
src/infrastructure/: db.py  knowledge.py  orm.py  repositories.py
tests/api/: conftest.py  test_api.py  test_chat_endpoint.py  test_invoice_pdf_endpoint.py  test_proactive_endpoint.py
tests/integration/: conftest.py  test_event_bus.py  test_repositories.py  test_seeder.py  test_storage.py  test_tool_call_audit.py
tests/unit/: fakes.py  mcp_fakes.py  test_consumption_insights.py  test_eval_gate.py  test_evals.py  test_faturamento.py  test_guardrail_hook.py  test_health.py  test_invoice_document.py  test_invoice_renderer.py  test_journeys_dynamic.py  test_knowledge_infra.py  test_knowledge_retrieval.py  test_mcp_audit.py  test_mcp_degradation.py  test_mcp_tools.py  test_mcp_trace.py  test_model_router.py  test_notifications.py  test_omni_instances.py  test_omni_sender_presence.py  test_operator_chat.py  test_persona_derivation.py  test_persona_registry.py  test_phone.py  test_proactive.py  (+9 more)
ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+68 files in other folders)
